# DMC1ArchipelagoClient

./: .gitignore  Cargo.toml  README.md  build.rs
src/: archipelago.rs  bank.rs  check_handler.rs  config.rs  connection_manager.rs  constants.rs  game_manager.rs  hook.rs  lib.rs  location_handler.rs  mapping.rs  save_handler.rs  skill_manager.rs  utilities.rs
src/compat/: ddmk_hook.rs  imgui_bindings.rs  inputs.rs  mod.rs
src/data/: locations.json  mod.rs
src/ui/: dx11_hooks.rs  mod.rs  overlay.rs  text_handler.rs
