[package]
name = "DMC1ArchipelagoClient"
version = "0.1.0"
edition = "2024"

[lib]
name = "dmc1_randomizer"
crate-type = ["cdylib"]

[build-dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }

[dependencies]
archipelago_rs = { path = "../archipelago_rs" }
bimap = {workspace = true}
windows = { workspace = true, features = ["Win32_System_LibraryLoader", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Security", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Devices", "Win32_Devices_HumanInterfaceDevice", "Win32_Graphics_Direct3D9", "Win32_Graphics_Gdi", "Win32_System_SystemServices", "Win32_Graphics_Dwm", "Win32_System_Diagnostics_Debug", "Win32_System_WindowsProgramming", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_DirectWrite", "Win32_System_Memory_NonVolatile", "Win32_System_Kernel", "Win32_UI_HiDpi", "Win32_Graphics_Direct3D_Fxc"] }
randomizer_utilities = { path = "../randomizer_utilities" }
log = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum_macros = "0.27.2"
minhook = "0.9.0"
imgui-sys = { version = "0.12.0" }
imgui = "0.12.0"
oneshot = "0.1.11"