[package]
name = "DMC1ArchipelagoClient"
version = "0.1.0"
edition = "2024"

[lib]
name = "dmc1_randomizer"
crate-type = ["cdylib"]

[build-dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }

[dependencies]
archipelago_rs = { path = "../archipelago_rs" }
bimap = {workspace = true}
windows = { workspace = true }
randomizer_utilities = { path = "../randomizer_utilities", features = ["dmc"] }
log = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum_macros = "0.27.2"
minhook = "0.9.0"
imgui-sys = { version = "0.12.0" }
imgui = "0.12.0"
oneshot = "0.1.13"
